update of header text, before/after photos, change phone number

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Alpha by HTML5 UP</title>
+		<title>Abby Glaze</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,20 +40,23 @@
 									</ul>
 								</li> -->
 								<li><a href="#testimonials">Testimonials</a></li>
-								<li id="navPhoneNumberLi" ><a href="tel://+447939080058" id="navPhoneNumber" class="button phone"><span>CALL NOW</span>: 07 939 0800 58</a></li>
+								<li id="navPhoneNumberLi" ><a href="tel://+447939080058" id="navPhoneNumber" class="button phone"><span>CALL NOW</span>: 07939 0800 58</a></li>
 							</ul>
 						</nav>
 					</section>
 					<nav id="narrowNav">
 						<ul>
-							<li><a href="tel://+447939080058" id="narrowNavPhoneNumber" class="button phone"><span>CALL NOW</span>: 07 939 0800 58</a></li>
+							<li><a href="tel://+447939080058" id="narrowNavPhoneNumber" class="button phone"><span>CALL NOW</span>: 07939 0800 58</a></li>
 						</ul>
 					</nav>
 				</header>
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Abby Glaze</h2>
+					<h2>Double glazing installations & repairs
+						<br />
+						Lock & handle repairs</h2>
+					
 					<p>Book a free assessment:</p>
 					<ul class="actions special">
 						<li><a href="tel://+447939080058" class="button primary">Face To Face</a></li>
@@ -66,9 +69,7 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Double glazing installations & repairs
-							<br />
-							Lock & handle repairs</h2>
+							<h2>Abby Glaze</h2>
 							<p>With over 20 years experience in the double glazing industry Nick Errington created Abby Glaze to provide top quality customer service for clients in his local area. Abby Glaze is a FENSA registered company, so you know you can trust us. We aim to install only the best materials, whilst providing you with great customer care and carrying out the works in as quick a time as possible.<br />
 								We cover the whole of Hertfordshire and much of North London.</p>
 						</header>
@@ -115,12 +116,12 @@
 								<div class="image-container2">
 								  <img
 									class="image-before2 slider-image2"
-								   src="/images/Window2Before.jpg"
+								   src="/images/Window2After.jpg"
 									alt="before"
 								  />
 								  <img
 									class="image-after2 slider-image2"
-									src="/images/Window2After.jpg"
+									src="/images/Window2Before.jpg"
 									alt="after"
 								  />
 								</div>
@@ -212,12 +213,12 @@
 								<div class="image-container">
 								<img
 									class="image-before slider-image"
-								src="/images/repairs1Before.jpg"
+								src="/images/repairs1After.jpg"
 									alt="before"
 								/>
 								<img
 									class="image-after slider-image"
-									src="/images/repairs1After.jpg"
+									src="/images/repairs1Before.jpg"
 									alt="after"
 								/>
 								</div>
@@ -317,12 +318,12 @@
 								<div class="image-container3">
 								<img
 									class="image-before3 slider-image3"
-								src="/images/lockBefore.png"
+								src="/images/lockAfter.png"
 									alt="before"
 								/>
 								<img
 									class="image-after3 slider-image3"
-									src="/images/lockAfter.png"
+									src="/images/lockBefore.png"
 									alt="after"
 								/>
 								</div>
@@ -417,12 +418,12 @@
 									<div class="image-container4">
 									<img
 										class="image-before4 slider-image4"
-									src="/images/conservatoryBefore.jpg"
+									src="/images/conservatoryAfter.jpg"
 										alt="before"
 									/>
 									<img
 										class="image-after4 slider-image4"
-										src="/images/conservatoryAfter.jpg"
+										src="/images/conservatoryBefore.jpg"
 										alt="after"
 									/>
 									</div>
@@ -520,7 +521,7 @@
 
 						</div>
 					</div>
-					C
+					
 				</section>
 				<!-- My html edit 006 - Testimonials -->
 
