--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Abby Glaze</title>
+		<link rel="icon" type="image/x-icon" href="images/default-removebg-preview-icon-only.png"></linklink>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -69,6 +70,33 @@
 							<li><a href="tel://+447939080058" class="button primary">Face To Face</a></li>
 							<li><a href="tel://+447939080058" class="button">Video/Phone</a></li>
 						</ul>
+						<section id="bannerTestimonials">
+							<section class="hiddenLeft">
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<p>Beautiful job. Nick installed my new conservatory. Quality service in good time. Couldn't ask for more.</p>
+							</section>
+							<section class="hiddenRight">
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<p>We had a new set of bay windows installed at the front of the house. Nick was clean and polite and the windows completely changed the look of the house, I love them.</p>
+							</section>
+							<section class="hiddenLeft">
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<span class="fa fa-star checked"></span>
+								<p>Our house was in serious need of a make over and Nick gave it just that. I feel good about it when I pull up in the driveway now.</p>
+							</section>
+						
+						</section>
 					</section>
 
 				<!-- Main -->
@@ -626,7 +654,7 @@
 								</div>
 							</div>
 						</form> -->
-
+						
 					</section>
 
 				<!-- Footer -->
