finish the banner testimonials

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<li><a href="tel://+447939080058" class="button">Video/Phone</a></li>
 						</ul>
 						<section id="bannerTestimonials">
-							<section class="hiddenLeft">
+							<section class="hiddenLeft upperTestimonial">
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
@@ -79,21 +79,21 @@
 								<span class="fa fa-star checked"></span>
 								<p>Beautiful job. Nick installed my new conservatory. Quality service in good time. Couldn't ask for more.</p>
 							</section>
-							<section class="hiddenRight">
+							<section class="hiddenLeft upperTestimonial">
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
-								<p>We had a new set of bay windows installed at the front of the house. Nick was clean and polite and the windows completely changed the look of the house, I love them.</p>
+								<p>Nick was clean and polite and the windows completely changed the look of the house,</br>  I love them.</p>
 							</section>
-							<section class="hiddenLeft">
+							<section class="hiddenLeft upperTestimonial">
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
 								<span class="fa fa-star checked"></span>
-								<p>Our house was in serious need of a make over and Nick gave it just that. I feel good about it when I pull up in the driveway now.</p>
+								<p>Our house was in serious need of a make over and Nick gave it just that.</p>
 							</section>
 						
 						</section>
