updated fixed call button to centre on smaller screens

--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
 							</ul>
 						</nav> -->
 					</header>
-					<section id="bottomBannerContainer" >
-						<ul id="bottomBanner" class="hiddenTop">
-							<li ><a href="tel://+447939080058"  class="button phone red"><span>CALL NOW</span>: 07939 080 058</a></li>
-						</ul>
+					<section id="centerDiv">
+						<section id="bottomBannerContainer" class="hiddenTop">
+									<a href="tel://+447939080058"  class="phoneButton phone red"><span>CALL NOW</span>: 07939 080 058</a>
+
+					</section>
+					<section id="centerDiv512">
+						<section id="bottomBannerContainer512" >
+									<a href="tel://+447939080058"  class="phoneButton phone red"><span>CALL NOW</span></a>
+
 					</section>
 
 				<!-- Banner -->
